...
                        onChange = { text = it },
                        placeholderText = placeholder,
                        modifier = Modifier
                            .background(MaterialTheme.colorScheme.primary)
                            .padding(bottom = 1.dp)
                            .background(MaterialTheme.colorScheme.surfaceContainer)
                            .testTag("DialogTextInput")
                    )
                }
                Row(
                    verticalAlignment = Alignment.Bottom,
                    horizontalArrangement = Arrangement.End,
                    modifier = Modifier
...
                            onDismiss()
                        },
                        text = btnLabel,
                        fontSize = 14.sp,
                        lineHeight = TextUnit.Unspecified,
                        enabled = notEmpty,
                        modifier = Modifier.testTag("Confirm")
                    )
                }
            }
        }
    }
}
...
