...
                    overflow = TextOverflow.Ellipsis,
                    maxLines = 1,
                    fontWeight = FontWeight.Bold,
                    fontSize = 18.sp,
                    lineHeight = 18.sp,
                    modifier = Modifier
                        .testTag("PageTitle")
                        .padding(start = onBackClick?.let { dimensionResource(R.dimen.padding_small) } ?: 0.dp)
                )
            }
            Row(
                horizontalArrangement = Arrangement.SpaceEvenly,
                verticalAlignment = Alignment.CenterVertically,
...
                    modifier = Modifier.weight(.20f)
                )
            }
        }
        TransparentBtnWithContextMenu(
            painter = painterResource(R.drawable.more_horiz),
            contentDescription = "Track options",
            tint = MaterialTheme.colorScheme.primary,
            modifier = Modifier.size(dimensionResource(R.dimen.icon_small))
        ) { closeMenu ->
            CustomContextMenuBtn(
                onClick = {
                    onInfoClick()
...
